examples/tailnet-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailnet-lb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: tailnet-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: tailnet-lb
  annotations:
    tailscale.com/hostname: "my-k8s-lb" # machine name that will show up on the tailnet
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale # tells tailscale to assign ip 
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
