examples/tailnet-funnel.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailnet-funnel

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tailnet-funnel
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-tailscale
          image: nginx:stable
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tailnet-funnel
spec:
  ports:
    - port: 80
  selector:
    app: nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: tailnet-funnel
  annotations:
    tailscale.com/funnel: "true"

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "funnel-foo"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
