examples/tailnet-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailnet-ingress

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tailnet-ingress
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-tailscale
          image: nginx:stable
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tailnet-ingress
spec:
  ports:
    - port: 80
  selector:
    app: nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: tailnet-ingress
spec:
  ingressClassName: tailscale # tell the tailscale operator to act 
  tls:
    - hosts:
        - "foo"  # the machine name that will show up on the tailnet
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
